# Otus_bulk_prompt

./: CMakeLists.txt
src/: main.cpp
